--- a/CrmBl/CrmBl.csproj
+++ b/CrmBl/CrmBl.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\Sell.cs" />
     <Compile Include="Model\Seller.cs" />
+    <Compile Include="Model\СashDesk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
