--- a/CrmBlTests/CrmBlTests.csproj
+++ b/CrmBlTests/CrmBlTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Model\CartTests.cs" />
+    <Compile Include="Model\СashDeskTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
